--- a/programs/test.tt
+++ b/programs/test.tt
@@ -297,40 +297,98 @@ function testinfix() {
 }
 
 function testarith() {
+	var zero, one = 1, two = 2;
 	call assert_equals( 4, +( +( 1 1 ) +( 1 1 ) ), ${-} );
 	call assert_equals( 5, +( 1 1 2 1 ), ${-} );
 	call assert_equals( 3, +( ONE TWO ), ${-} );
+	call assert_equals( 3, +( ONE two ), ${-} );
+	call assert_equals( 0, -( 1 ONE ), ${-} );
 	call assert_equals( 0, -( 1 1 ), ${-} );
+	call assert_equals( 0, -( 1 one ), ${-} );
+	call assert_equals( 4, *( 2 TWO ), ${-} );
 	call assert_equals( 4, *( 2 2 ), ${-} );
+	call assert_equals( 4, *( 2 two ), ${-} );
+	call assert_equals( 3, /( 6 TWO ), ${-} );
 	call assert_equals( 3, /( 6 2 ), ${-} );
-	call assert_equals( 2, %( 6 4 ), ${-} );
+	call assert_equals( 3, /( 6 two ), ${-} );
+	call assert_equals( 2, %( 6 *( TWO TWO ) ), ${-} );
+	call assert_equals( 1, %( 1 2 ), ${-} );
+	call assert_equals( 1, %( 1 two ), ${-} );
+	call assert_equals( 8, <<( 4 ONE ), ${-} );
 	call assert_equals( 8, <<( 4 1 ), ${-} );
+	call assert_equals( 8, <<( 4 one ), ${-} );
+	call assert_equals( -4, >>( -8 ONE ), ${-} );
 	call assert_equals( -4, >>( -8 1 ), ${-} );
+	call assert_equals( -4, >>( -8 one ), ${-} );
+	call assert_equals( 1, =( 1 ONE ), ${-} );
 	call assert_equals( 1, =( 1 1 ), ${-} );
+	call assert_equals( 1, =( 1 one ), ${-} );
+	call assert_equals( 0, =( 1 FALSE ), ${-} );
 	call assert_equals( 0, =( 1 0 ), ${-} );
+	call assert_equals( 0, =( 1 zero ), ${-} );
+	call assert_equals( 0, <>( 1 ONE ), ${-} );
 	call assert_equals( 0, <>( 1 1 ), ${-} );
+	call assert_equals( 0, <>( 1 one ), ${-} );
+	call assert_equals( 1, <>( 1 FALSE ), ${-} );
 	call assert_equals( 1, <>( 1 0 ), ${-} );
+	call assert_equals( 1, <>( 1 zero ), ${-} );
+	call assert_equals( 1, <( 0 ONE ), ${-} );
 	call assert_equals( 1, <( 0 1 ), ${-} );
+	call assert_equals( 1, <( 0 one ), ${-} );
+	call assert_equals( 0, <( 1 ONE ), ${-} );
 	call assert_equals( 0, <( 1 1 ), ${-} );
+	call assert_equals( 0, <( 1 one ), ${-} );
+	call assert_equals( 1, <e( 0 ONE ), ${-} );
 	call assert_equals( 1, <e( 0 1 ), ${-} );
+	call assert_equals( 1, <e( 0 one ), ${-} );
+	call assert_equals( 1, <e( 1 ONE ), ${-} );
 	call assert_equals( 1, <e( 1 1 ), ${-} );
+	call assert_equals( 1, <e( 1 one ), ${-} );
+	call assert_equals( 0, <e( 1 FALSE ), ${-} );
 	call assert_equals( 0, <e( 1 0 ), ${-} );
+	call assert_equals( 0, <e( 1 zero ), ${-} );
+	call assert_equals( 1, >( 1 FALSE ), ${-} );
 	call assert_equals( 1, >( 1 0 ), ${-} );
+	call assert_equals( 1, >( 1 zero ), ${-} );
+	call assert_equals( 0, >( 1 ONE ), ${-} );
 	call assert_equals( 0, >( 1 1 ), ${-} );
+	call assert_equals( 0, >( 1 one ), ${-} );
+	call assert_equals( 1, >e( 1 FALSE ), ${-} );
 	call assert_equals( 1, >e( 1 0 ), ${-} );
+	call assert_equals( 1, >e( 1 zero ), ${-} );
+	call assert_equals( 1, >e( 1 ONE ), ${-} );
 	call assert_equals( 1, >e( 1 1 ), ${-} );
+	call assert_equals( 1, >e( 1 one ), ${-} );
+	call assert_equals( 0, >e( 0 ONE ), ${-} );
 	call assert_equals( 0, >e( 0 1 ), ${-} );
+	call assert_equals( 0, >e( 0 one ), ${-} );
+	call assert_equals( 0, &( 1 TWO ), ${-} );
 	call assert_equals( 0, &( 1 2 ), ${-} );
+	call assert_equals( 0, &( 1 two ), ${-} );
+	call assert_equals( 2, &( 2 TWO ), ${-} );
 	call assert_equals( 2, &( 2 2 ), ${-} );
+	call assert_equals( 2, &( 2 two ), ${-} );
+	call assert_equals( 3, |( 1 TWO ), ${-} );
 	call assert_equals( 3, |( 1 2 ), ${-} );
+	call assert_equals( 3, |( 1 two ), ${-} );
+	call assert_equals( 1, ^( 1 FALSE ), ${-} );
 	call assert_equals( 1, ^( 1 0 ), ${-} );
+	call assert_equals( 1, ^( 1 zero ), ${-} );
+	call assert_equals( 0, ^( 1 ONE ), ${-} );
 	call assert_equals( 0, ^( 1 1 ), ${-} );
-	call assert_equals( -1, ~( 0 ), ${-} );
+	call assert_equals( 0, ^( 1 one ), ${-} );
+	call assert_equals( -1, ~( FALSE ), ${-} );
 	call assert_equals( 21, +( *( +( *( 1 2 ) 3 ) 4 ) 1 ), ${-} );
+	call assert_equals( 10, +( *( +( *( 1 two ) two ) two ) two ), ${-} );
 	call assert_throws( "1", ${ () { call +( except( ${ 1 } ) except( ${ 0 } ) ); } } );
+	call assert_throws( "1", ${ () { call +( except( ${ 1 } ) 0 ); } } );
 	call assert_throws( "1", ${ () { call +( 0 except( ${ 1 } ) ); } } );
+	call assert_throws( "Integer division by zero", ${ () { call /( 1 FALSE ); } } );
 	call assert_throws( "Integer division by zero", ${ () { call /( 1 0 ); } } );
+	call assert_throws( "Integer division by zero", ${ () { var zero; call /( 1 zero ); } } );
+	call assert_throws( "Modulo division by zero", ${ () { call %( 1 FALSE ); } } );
 	call assert_throws( "Modulo division by zero", ${ () { call %( 1 0 ); } } );
+	call assert_throws( "Modulo division by zero", ${ () { var zero; call %( 1 zero ); } } );
 }
 
 function testlogic() {
