--- a/programs/test.tt
+++ b/programs/test.tt
@@ -527,10 +527,16 @@ function testtup() {
 	call assert_throws( "1", ${ () { call $tup( "", except( ${ 1 } ) ); } } );
 }
 
+function testread() {
+	call assert_equals( "", $read( 0 ), ${-} );
+	call assert_throws( "1", ${ () { call $read( except( ${ 1 } ) ); } } );
+	call assert_throws( "Invalid length", ${ () { call $read( -1 ); } } );
+}
+
 function testload() {
 	var src = $load( $src );
-	call assert_equals( $load( $src, 100 ), $sub( src, 100, -( $len( src ) 100 ) ), ${-} );
-	call assert_equals( $load( $src, 100, 100 ), $sub( src, 100, 100 ), ${-} );
+	call assert_equals( $sub( src, 100, -( $len( src ) 100 ) ), $load( $src, 100 ), ${-} );
+	call assert_equals( $sub( src, 100, 100 ), $load( $src, 100, 100 ), ${-} );
 	call assert_equals( "", $load( $src, 0, 0 ), ${-} );
 	call assert_equals( "", $load( $src, -1, 0 ), ${-} );
 	call assert_equals( "", $load( $src, $len( src ), 1 ), ${-} );
@@ -870,6 +876,7 @@ program test {
 	call testlen();
 	call testtup();
 	call testsrc();
+	call testread();
 	call testload();
 	call testsave();
 	call testflen();
