--- a/programs/test.tt
+++ b/programs/test.tt
@@ -859,6 +859,13 @@ function testtype() {
 	call assert( $same( $type( $new( struc ) ) struc ), ${-} );
 }
 
+function testfield() {
+	call assert_equals( "a", $field( struc 0 ), ${-} );
+	call assert_equals( "g", $field( exten 6 ), ${-} );
+	call assert_throws( "Not a structure", ${ () { call $field( 0 0 ); } } );
+	call assert_throws( "Field index", ${ () { call $field( struc 5 ); } } );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -916,5 +923,6 @@ program test {
 	call testworker();
 	call testthiscall();
 	call testtype();
+	call testfield();
 	print "Tests passed.";
 }
